# minimal-with-rnnoise

./: README.md
InterCom/docs/: 2-hours_seminar.ipynb
rnnoise/: CMakeLists.txt
rnnoise/rnnoise_dll_test/x64/Debug/: vc142.idb
rnnoise/rnnoise_dll_test/x64/Release/rnnoise_dll_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  rnnoise_dll_test.lastbuildstate
rnnoise/rnnoise_share/x64/Release/: rnnoise.dll.recipe  rnnoise.iobj  rnnoise.ipdb
rnnoise/rnnoise_share/x64/Release/rnnoise_share.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
rnnoise/rnnoise_static/x64/Release/rnnoise_static.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
rnnoise/rnnoise_training/x64/Debug/: rnnoise-training.exe.recipe  rnnoise-training.ilk  vc142.idb
rnnoise/rnnoise_training/x64/Debug/rnnoise-training.tlog/: CL.command.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
rnnoise/rnnoise_training/x64/Release/rnnoise-training.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
rnnoise/rnnoise_windows/x64/Debug/: rnnoise-windows.exe.recipe  rnnoise-windows.ilk  vc142.idb
rnnoise/rnnoise_windows/x64/Debug/rnnoise-windows.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rnnoise-windows.lastbuildstate
rnnoise/rnnoise_windows/x64/Release/: rnnoise-windows.exe.recipe  rnnoise-windows.iobj  rnnoise-windows.ipdb
(+10 files in other folders)
